--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "request": "^2.67.0",
     "runsync": "^0.1.8",
     "string-utils-cwm": "~0.1.4",
-    "yargs": "~3.32.0"
+    "yargs": "~3.32.0",
+    "colors": "~1.1.2"
   },
   "bin": {
     "slack-standup": "index.js"
